--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
 
   <body>
     <nav class='header-nav'>
-      <i>
+      <i class='header-swim'>
         <%= link_to(image_tag('shield_usa_swim.png', size: 80), 'http://www.usaswimming.org/DesktopDefault.aspx', target: '_blank') %>
       </i>
-      <i>
+      <i class='header-gasc'>
         <%= image_tag('gasc_header_2015.png', size: '280x180', alt: 'GASC') %>
       </i>
-      <i>
+      <i class='header-login'>
         Sign In
       </i>
       <br>
