--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,9 @@
-Welcome to the Greater Ada Swim Club website!
+<div class="gasc-calendar">
+  calendar
+</div>
+<div class="gasc-newsfeed">
+  news
+</div>
+<div class="gasc-content">
+  Welcome to the Greater Ada Swim Club website!
+</div>
