--- a/app/views/welcome/_control_bar.html.erb
+++ b/app/views/welcome/_control_bar.html.erb
@@ -1,13 +1,23 @@
 <div class="header-control-bar">
   <% if current_page?(root_url) %>
-    <button>
+    <button type="button" class="btn btn-primary active">
       <%= link_to "about", welcome_about_path %>
     </button>
-    <button>
+    <button type="button" class="btn btn-primary active">
       <%= link_to "coaches", welcome_coaches_path%>
     </button>
-  <% else %>
-    <button>
+  <% elsif current_page?(welcome_about_path) %>
+    <button type="button" class="btn btn-primary active">
+      <%= link_to "home", root_url %>
+    </button>
+    <button type="button" class="btn btn-primary active">
+      <%= link_to "coaches", welcome_coaches_path%>
+    </button>
+  <% elsif current_page?(welcome_coaches_path) %>
+    <button type="button" class="btn btn-primary active">
+      <%= link_to "about", welcome_about_path %>
+    </button>
+    <button type="button" class="btn btn-primary active">
       <%= link_to "home", root_url %>
     </button>
   <% end %>
