--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
-<div class="gasc-calendar">
-  calendar
-</div>
-<div class="gasc-newsfeed">
-  news
-</div>
-<div class="gasc-content">
-  Welcome to the Greater Ada Swim Club website!
+<div class="container-fluid">
+  <div class="row">
+    <div class="container col-md-4">
+      calendar
+    </div>
+    <div class="container col-md-8">
+      Welcome to the Greater Ada Swim Club website!
+    </div>
+  </div>
 </div>
