--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="container col-md-4">
+    <div class="container col-xs-4 col-sm-3 col-md-2">
       calendar
     </div>
-    <div class="container col-md-8">
+    <div class="container col-xs-8 col-sm-9 col-md-10">
       Welcome to the Greater Ada Swim Club website!
     </div>
   </div>
