--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container-fluid">
   <div class="row">
     <div class="container col-xs-4 col-sm-3 col-md-2">
-
+      calendar goes here
+      <br>
+      other calendar goes here
     </div>
     <div class="container col-xs-8 col-sm-9 col-md-10">
       Welcome to the Greater Ada Swim Club website!
