--- a/app/views/welcome/_calendar.html.erb
+++ b/app/views/welcome/_calendar.html.erb
@@ -5,3 +5,11 @@
         frameborder="0"
         scrolling="no">
 </iframe>
+<br>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=240&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=greateradaswimclub%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FChicago<%= next_month %>"
+        style="border:solid 1px #39B348"
+        width="240"
+        height="240"
+        frameborder="0"
+        scrolling="no">
+</iframe>
