As a user I would like to be able to log into the private section using my Google account or an email

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,11 +41,13 @@ hr.shadow{
 .header-control-bar{
   color: $white;
   background-color: inherit;
+  padding-left: 2em;
   text-align: left;
 }
 
 .btn{
   background-color: $light-green;
+  text-transform: capitalize;
 
   a,
   a.visited{
