--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,12 @@
         </div>
         <div class="col-md-3 col-sm-4 sign-in">
           <% if user_signed_in? %>
-            <strong><%= link_to "#{current_user.firstname} #{current_user.lastname}", edit_user_registration_path %></strong> |
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+            <% if current_user.image? %>
+              <%= image_tag(current_user.image, size: 80) %>
+            <% else %>
+              <%= image_tag('gasc_bw_2015.jpg', size: 80) %>
+            <% end %>
+            <strong><%= link_to "#{current_user.firstname} #{current_user.lastname}", edit_user_registration_path %></strong>
           <% else %>
             <%= link_to "Sign Up", new_user_registration_path %> |
             <%= link_to "Sign In", new_user_session_path %>
@@ -34,7 +38,7 @@
       </div>
     </div>
     <% if user_signed_in? %>
-      <%= render "user/control_bar" %>
+      <%= render "users/control_bar" %>
     <% else %>
       <%= render "welcome/control_bar" %>
     <% end %>
