--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,6 +37,9 @@
       <%= f.submit "Sign up" %>
     </button>
   <% end %>
+  <br>
+  <%= link_to(image_tag('google_signin_buttons/web/1x/btn_google_signin_light_normal_web.png'), user_google_oauth2_omniauth_authorize_path) %>
+  <br><br>
 
   <%= render "devise/shared/links" %>
 </div>
