--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$light-blue: #C4EAFF;
+$light-blue: #E5F5FF;
 $medium-blue: #2CA8DD;
 $dark-blue: #000566;
 $white: #FFFFFF;
