--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,8 @@
             <% else %>
               <%= image_tag('gasc_bw_2015.jpg', size: 80) %>
             <% end %>
-            <strong><%= link_to "#{current_user.firstname} #{current_user.lastname}", edit_user_registration_path %></strong>
+            <strong><%= link_to "#{current_user.firstname} #{current_user.lastname}", edit_user_registration_path %></strong> | 
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
           <% else %>
             <%= link_to "Sign Up", new_user_registration_path %> |
             <%= link_to "Sign In", new_user_session_path %>
