--- a/app/views/users/_control_bar.html.erb
+++ b/app/views/users/_control_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="header-control-bar">
   <% if current_page?(root_url) %>
     <button type="button" class="btn btn-primary">
-      <%= link_to "form" %>
+      <%= link_to "forms" %>
     </button>
     <button type="button" class="btn btn-primary">
       <%= link_to "forum" %>
