--- a/app/views/users/_control_bar.html.erb
+++ b/app/views/users/_control_bar.html.erb
@@ -1,15 +1,15 @@
 <div class="header-control-bar">
   <% if current_page?(root_url) %>
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary forms">
       <%= link_to "forms" %>
     </button>
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary forum">
       <%= link_to "forum" %>
     </button>
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary terminology">
       <%= link_to "terminology" %>
     </button>
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary payment">
       <%= link_to "payment" %>
     </button>
   <% end %>
