--- a/app/views/welcome/_calendar.html.erb
+++ b/app/views/welcome/_calendar.html.erb
@@ -3,7 +3,8 @@
         width="240"
         height="240"
         frameborder="0"
-        scrolling="no">
+        scrolling="no"
+        name="current_calendar">
 </iframe>
 <br>
 <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=240&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=greateradaswimclub%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FChicago<%= next_month %>"
@@ -11,5 +12,6 @@
         width="240"
         height="240"
         frameborder="0"
-        scrolling="no">
+        scrolling="no"
+        name="next_month_calendar">
 </iframe>
