--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,13 +5,13 @@
     <%= devise_error_messages! %>
 
     <div class="field">
-      <%= f.label :firstname %><br>
-      <%= f.text_field :firstname %>
+      <%= f.label :first_name %><br>
+      <%= f.text_field :first_name %>
     </div>
 
     <div class="field">
-      <%= f.label :lastname %><br>
-      <%= f.text_field :lastname %>
+      <%= f.label :last_name %><br>
+      <%= f.text_field :last_name %>
     </div>
 
     <div class="field">
