--- a/app/views/users/_admin_control_bar.html.erb
+++ b/app/views/users/_admin_control_bar.html.erb
@@ -10,7 +10,7 @@
       <%= link_to "email" %>
     </button>
     <button type="button" class="btn btn-primary users">
-      <%= link_to "users", "/admin_dashboard/user" %> 
+      <%= link_to "users", rails_admin.index_path('User') %> 
     </button>
   <% end %>
 </div>
