Adding forms to standard users and administrators

--- a/app/views/users/_admin_control_bar.html.erb
+++ b/app/views/users/_admin_control_bar.html.erb
@@ -10,7 +10,10 @@
       <%= link_to "email" %>
     </button>
     <button type="button" class="btn btn-primary users">
-      <%= link_to "users", rails_admin.index_path('User') %> 
+      <%= link_to "users", rails_admin.index_path('User') %>
+    </button>
+    <button type="button" class="btn btn-primary forms">
+      <%= link_to "forms", rails_admin.index_path('Form') %>
     </button>
   <% end %>
 </div>
