--- a/app/views/welcome/_control_bar.html.erb
+++ b/app/views/welcome/_control_bar.html.erb
@@ -1,24 +1,14 @@
 <div class="header-control-bar">
   <% if current_page?(root_url) %>
-    <button type="button" class="btn btn-primary about">
-      <%= link_to "about", welcome_about_path %>
-    </button>
-    <button type="button" class="btn btn-primary coaches">
-      <%= link_to "coaches", welcome_coaches_path%>
-    </button>
+      <%= link_to "about", welcome_about_path, class: "btn btn-primary about" %>
+      <%= link_to "coaches", welcome_coaches_path, class: "btn btn-primary coaches" %>
+
   <% elsif current_page?(welcome_about_path) %>
-    <button type="button" class="btn btn-primary home">
-      <%= link_to "home", root_url %>
-    </button>
-    <button type="button" class="btn btn-primary coaches">
-      <%= link_to "coaches", welcome_coaches_path%>
-    </button>
+    <%= link_to "home", root_url, class: "btn btn-primary home" %>
+    <%= link_to "coaches", welcome_coaches_path, class: "btn btn-primary coaches"%>
+
   <% elsif current_page?(welcome_coaches_path) %>
-    <button type="button" class="btn btn-primary about">
-      <%= link_to "about", welcome_about_path %>
-    </button>
-    <button type="button" class="btn btn-primary home">
-      <%= link_to "home", root_url %>
-    </button>
+    <%= link_to "about", welcome_about_path, class: "btn btn-primary about" %>
+    <%= link_to "home", root_url, class: "btn btn-primary home" %>
   <% end %>
 </div>
