--- a/app/views/users/_standard_control_bar.html.erb
+++ b/app/views/users/_standard_control_bar.html.erb
@@ -1,17 +1,12 @@
 
 <div class="header-control-bar">
-  <% if current_page?(root_url) %>
-    <button type="button" class="btn btn-primary forms">
-      <%= link_to "forms" %>
-    </button>
-    <button type="button" class="btn btn-primary forum">
-      <%= link_to "forum" %>
-    </button>
-    <button type="button" class="btn btn-primary terminology">
-      <%= link_to "terminology" %>
-    </button>
-    <button type="button" class="btn btn-primary payment">
-      <%= link_to "payment" %>
-    </button>
+  <% if current_page?(swim_forms_path) %>
+    <%= link_to "home", root_path, class: "btn btn-primary forms" %>
+  <% else %>
+    <%= link_to "forms", swim_forms_path, class: "btn btn-primary forms" %>
   <% end %>
+
+  <%= link_to "terminology", class: "btn btn-primary terminology" %>
+  <%= link_to "forum", class: "btn btn-primary forum" %>
+  <%= link_to "payment", class: "btn btn-primary payment" %>
 </div>
