--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
         <div class="col-md-3 col-sm-4 sign-in">
           <% if user_signed_in? %>
             <% if current_user.image? %>
-              <%= image_tag(current_user.image, size: 80, class: "profile-image-local") %>
+              <%= image_tag(current_user.image, size: 80) %>
             <% else %>
-              <%= image_tag(avatar_url(current_user), class: "profile-image-gravatar") %>
+              <%= image_tag(avatar_url(current_user)) %>
             <% end %>
             <strong><%= link_to "#{current_user.first_name} #{current_user.last_name}", edit_user_registration_path %></strong> |
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
