--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <% if current_user.image? %>
               <%= image_tag(current_user.image, size: 80) %>
             <% else %>
-              <%= image_tag('gasc_bw_2015.jpg', size: 80) %>
+              <%= image_tag(avatar_url(current_user)) %>
             <% end %>
             <strong><%= link_to "#{current_user.first_name} #{current_user.last_name}", edit_user_registration_path %></strong> |
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
