cleaning up calendar

--- a/app/views/welcome/_calendar.html.erb
+++ b/app/views/welcome/_calendar.html.erb
@@ -1,4 +1,4 @@
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=240&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=greateradaswimclub%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FChicago"
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=240&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=greateradaswimclub%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FChicago"
         style="border:solid 1px #39B348"
         width="240"
         height="240"
@@ -7,7 +7,7 @@
         name="current_calendar">
 </iframe>
 <br>
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=240&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=greateradaswimclub%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FChicago<%= next_month %>"
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=240&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=greateradaswimclub%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FChicago<%= next_month %>"
         style="border:solid 1px #39B348"
         width="240"
         height="240"
