issue 22 finishing up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "users";
+@import "swimmer_details";
 
 $light-blue: #E5F5FF;
 $medium-blue: #2CA8DD;
